# SecureMessage

./: CMakeLists.txt  README.md  SynAES-GUI.pro  azure-pipelines.yml  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/: CMakeLists.txt
src/TextSecure-QT/: CMakeLists.txt  EncryptionHandler.cpp  EncryptionHandler.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
